--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@
     font-size: 3rem;
 }
 .butt{
+    border: 2px solid white;
     margin-top: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
